--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
@@ -179,7 +179,7 @@
     <value>Create abstraction for definition</value>
   </data>
   <data name="AddAdapterDescriptorTitle" xml:space="preserve">
-    <value>Add an adapter descriptor class</value>
+    <value>Add an adapter descriptor</value>
   </data>
   <data name="AdapterStaticMemberTitle" xml:space="preserve">
     <value>Redirect static member access to alternate member</value>
